# Integrated-Circuit-Simulation-Platform

./: .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md
examples/: CMakeLists.txt  plugin_example.cpp  rc_circuit_example.cpp  rc_filter.json
include/core/: circuit.h  cuda_engine.h
include/plugins/: plugin_system.h
src/: main.cpp
src/core/: circuit.cpp  cuda_engine.cpp
src/cuda/: cuda_engine.cu
src/plugins/: example_plugin.cpp  plugin_system.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_simulation.cpp
tests/unit/: CMakeLists.txt  test_circuit.cpp  test_plugins.cpp
web/: index.html  package.json
web/src/: simulation-interface.js  visualization.js
